3.5
	+ Set version to 3.5
	+ Added support to https access
3.4
	+ Initial release