@@ -1,3 +1,5 @@
+HEAD
+	+ Set proper actions and files in module enable action
 3.5
 	+ Set version to 3.5
 	+ Added support to https access
